SMETANA and Minimal Media debugging progress

--- a/examples/Community Modeling/MSCommunity_1.ipynb
+++ b/examples/Community Modeling/MSCommunity_1.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cobrakbase 0.2.8\n"
+      "cobrakbase 0.3.1\n"
      ]
     }
    ],
@@ -30,8 +30,11 @@
     "    kbase = cobrakbase.KBaseAPI(token_file.readline())\n",
     "\n",
     "# ecoli = kbase.get_from_ws(\"iML1515\",76994)\n",
-    "ah991 = kbase.get_from_ws(\"iAH991V2\", 93832)\n",
-    "pf = kbase.get_from_ws(\"iSB1139.kb.gf\",30650)\n",
+    "# ah991 = kbase.get_from_ws(\"iAH991V2\", 93832)\n",
+    "AP49 = kbase.get_from_ws(\"Sphingobium_AP49_pacbio_v2.RAST.fbamodel\", 114731)\n",
+    "BC15 = kbase.get_from_ws(\"Bacillus_sp._bc15.RAST.fbamodel\", 114731)\n",
+    "AP49_BC15_model = kbase.get_from_ws(\"AP49-BC15\",114731)\n",
+    "# pf = kbase.get_from_ws(\"iSB1139.kb.gf\",30650)\n",
     "\n",
     "# import cFBA\n",
     "# %run ../../modelseedpy/community/mscommunity.py\n",
@@ -47,17 +50,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "Align exchange reactions in Bacillus_sp._bc15.RAST.fbamodel \n",
+      " ==============================================================\n",
+      "\n",
+      "\n",
+      "\n",
+      "Align exchange reactions in Sphingobium_AP49_pacbio_v2.RAST.fbamodel \n",
+      " =======================================================================\n",
+      "\n",
+      "\n",
+      "0 exchange reactions were substituted and 0 exchange metabolite IDs were redefined by align_exchanges().\n",
+      "cpd11416_c1 Bacillus_sp._bc15.RAST.fbamodel\n",
+      "bio2 1\n",
+      "[2]\n",
+      "cpd11416_c2 Sphingobium_AP49_pacbio_v2.RAST.fbamodel\n",
+      "bio3 1\n",
+      "[2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../modelseedpy/community/commhelper.py\n",
+    "\n",
+    "comm_model = build_from_species_models([BC15, AP49], cobra_model=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Solution 100.000 at 0x1a46c949a30>\n",
+      "<Solution 119.323 at 0x1a46c949ac0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(comm_model.optimize())\n",
+    "print(AP49_BC15_model.optimize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximize\n",
+      "1.0*bio1 - 1.0*bio1_reverse_b18f7\n",
+      "Maximize\n",
+      "1.0*bio1 - 1.0*bio1_reverse_b18f7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(comm_model.objective)\n",
+    "print(AP49_BC15_model.objective)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = kbase.get_from_ws(\"E_iAH991V2\",40576)\n",
+    "model2 = kbase.get_from_ws(\"E_iML1515.kb\",40576)\n",
+    "com_model = kbase.get_from_ws(\"CMM_iAH991V2_iML1515.kb\",40576)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "modelseedpy.community.mscompatibility - ERROR - The Bacteroides_thetaiotaomicron_VPI-5482.fbamdl.23 model has residual non-standard metabolites in its exchange reactions: {'pe_cer1_bt_e0', 'hspg_degr_12_e0', 's2l2n2m2m_e0', 'alagly_e0', 'fucneulacnhx_e0', 'chtbs_e0', 'glypro_e0', 'hspg_degr_7_e0', 'hspg_rest_e0', 'gncore2_e0', 'lacnfucpt_e0', 'amannan140_e0', 'Ser_Thr_e0', 'ha_deg1_e0', 'isoval_e0', 'glyglu_e0', 'sT_antigen_e0', 'hspg_degr_8_e0', 'cspg_b_e0', 'hspg_degr_15_e0', 'hspg_degr_5_e0', 'hspg_degr_13_e0', '2omfuc_e0', 'T_antigen_e0', 'mqn10_e0', 'lacnnttr_e0', 'gam26s_e0', 'levanttr_e0', 'unsdigalur_e0', '3fuclac_e0', 'kestottr_e0', 'core3_e0', '3ddlhept_e0', 'plac_e0', 'cspg_c_e0', 'isobut_e0', 'arabinan101_e0', 'Tn_antigen_e0', 'alaglu_e0', 'l2n2m2mn_e0', 's2l2fn2m2masn_e0', 'glyasn_e0', 'arabinogal_e0', 'kestopt_e0', 'manpt_e0', 'gncore1_e0', 'cspg_b_degr_e0', 'core2_e0', 'levan1000_e0', '2omxyl_e0', 'sTn_antigen_e0', 'core7_e0', 'core6_e0', 'apio_D_e0', 'glycogen1500_e0', 'cps_bt_e0', 'lmn30_e0', 'sphmyln_bt_e0', 'pullulan1200_e0', 'dsT_antigen_e0', 'core4_e0', 'oligofru4_e0', 'lacdfucttr_e0', 'levantttr_e0', 'neulacnttr_e0', 's2l2n2m2masn_e0', 'hspg_degr_14_e0', 'hspg_degr_2_e0', 'galam_e0', 'm2mn_e0', 'strch2_e0', '7ocholate_e0', 'hspg_degr_11_e0', 'hspg_degr_1_e0', 'kesto_e0', 'strch1_e0', 'hspg_degr_4_e0', 'homogal_e0', 'alaasp_e0', 'lacnttr_e0', 'mqn11_e0', 'rhamnogalurII_e0', 'rhamnogalurI_e0', 'mn_e0', 'isocapr_e0', 'leuleu_e0', 'mantr_e0', 'amylose300_e0', 'acerA_e0', 'ha_e0', 'lacndfuchx_e0', 'stys_e0', 'mqn9_e0', '12ethd_e0', 'cspg_c_rest_e0', 'mbenz_e0', 'indlac_e0', 'lps_bt_e0', 'arabttr_e0', 'idour_e0', 'levanb_e0', 'ha_pre1_e0', 'lmn2_e0', 'n2m2mn_e0', 'metala_e0', 'argarg_e0', 'hspg_degr_6_e0', 'dt5hsu_e0', 'alathr_e0', 'acgalidour_e0', 'phearg_e0', 'acgalidour2s_e0', 'hspg_degr_9_e0', 'cspg_ab_rest_e0', 'gchola_e0', 'starch1200_e0', '2fuclac_e0', 'f1a_e0', 'acgalglcur_e0', 'phppa_e0', 'cspg_a_e0', 'cspg_a_degr_e0', 'hspg_degr_10_e0', 'glyasp_e0', 'manttr_e0', 'leugly_e0', 'pect_e0', 'core5_e0', 'hspg_e0', 'manb_e0', 'cspg_c_degr_e0', 's2l2n2m2mn_e0', 'core8_e0', 'pecticgal_e0', 'hspg_degr_3_e0'}. Specify a True `printing` parameter to view why these metabolites were not corrected.\n"
+      "modelseedpy.community.mscompatibility - ERROR - The Bacteroides_thetaiotaomicron_VPI-5482.fbamdl.23 model has residual non-standard metabolites in its exchange reactions: {'alaasp_e0', 'pecticgal_e0', 'm2mn_e0', 'mn_e0', 's2l2n2m2m_e0', 'hspg_degr_2_e0', 'neulacnttr_e0', 'strch1_e0', 'glyasn_e0', 'cspg_c_degr_e0', 'lacndfuchx_e0', 'rhamnogalurI_e0', 'core6_e0', 'oligofru4_e0', 'alagly_e0', 'alathr_e0', 'lmn2_e0', 'lps_bt_e0', 's2l2fn2m2masn_e0', 'leuleu_e0', 'acgalglcur_e0', 's2l2n2m2masn_e0', 'rhamnogalurII_e0', 'cspg_c_e0', 'cspg_c_rest_e0', 'glycogen1500_e0', 'f1a_e0', 'metala_e0', 'Ser_Thr_e0', 'manb_e0', 'indlac_e0', 'hspg_rest_e0', 'manpt_e0', 'levanb_e0', 'hspg_degr_9_e0', '2omfuc_e0', 'starch1200_e0', 'chtbs_e0', '3ddlhept_e0', 'mantr_e0', 'plac_e0', 'amylose300_e0', 'phearg_e0', 'gncore1_e0', 'core3_e0', 'leugly_e0', 'idour_e0', 'core4_e0', 'kestopt_e0', 'argarg_e0', 'alaglu_e0', 'arabinogal_e0', 'gchola_e0', 'levanttr_e0', '2fuclac_e0', '12ethd_e0', 'T_antigen_e0', 'hspg_degr_14_e0', 'core5_e0', 'glyasp_e0', 'gncore2_e0', '2omxyl_e0', 'ha_pre1_e0', 'kestottr_e0', 'hspg_degr_8_e0', 'hspg_degr_1_e0', 'lacdfucttr_e0', 'hspg_degr_3_e0', 'core2_e0', 'cspg_a_degr_e0', 'strch2_e0', 'dt5hsu_e0', 'glypro_e0', 'lacnttr_e0', 'l2n2m2mn_e0', 'hspg_e0', 'isobut_e0', 'sT_antigen_e0', 'arabinan101_e0', 'acerA_e0', 'glyglu_e0', 'hspg_degr_4_e0', 'isocapr_e0', 'acgalidour_e0', 'galam_e0', 'arabttr_e0', 'mqn9_e0', 'homogal_e0', 'hspg_degr_11_e0', 'sTn_antigen_e0', 'isoval_e0', 's2l2n2m2mn_e0', 'hspg_degr_6_e0', 'cspg_ab_rest_e0', 'pullulan1200_e0', 'hspg_degr_10_e0', 'core8_e0', 'gam26s_e0', 'kesto_e0', 'mqn10_e0', 'stys_e0', 'lmn30_e0', 'pect_e0', 'dsT_antigen_e0', 'levantttr_e0', 'cps_bt_e0', 'hspg_degr_15_e0', 'hspg_degr_12_e0', 'apio_D_e0', 'unsdigalur_e0', 'manttr_e0', '7ocholate_e0', 'lacnfucpt_e0', 'hspg_degr_5_e0', 'lacnnttr_e0', 'levan1000_e0', 'pe_cer1_bt_e0', 'Tn_antigen_e0', 'fucneulacnhx_e0', 'ha_deg1_e0', 'hspg_degr_13_e0', 'acgalidour2s_e0', '3fuclac_e0', 'amannan140_e0', 'hspg_degr_7_e0', 'mqn11_e0', 'sphmyln_bt_e0', 'cspg_b_degr_e0', 'n2m2mn_e0', 'core7_e0', 'cspg_b_e0', 'phppa_e0', 'cspg_a_e0', 'mbenz_e0', 'ha_e0'}. Specify a True `printing` parameter to view why these metabolites were not corrected.\n",
+      "modelseedpy.core.msmodel - ERROR - The [0, 0] bounds are not amenable with a direction string.\n"
      ]
     },
     {
@@ -75,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "modelseedpy.community.mscompatibility - ERROR - The iSB1139 model has residual non-standard metabolites in its exchange reactions: {'r277_e0', 'r1423_e0', 'r505_e0', 'r1262_e0', 'r1535_e0', 'r1400_e0'}. Specify a True `printing` parameter to view why these metabolites were not corrected.\n"
+      "modelseedpy.community.mscompatibility - ERROR - The iML1515 model has residual non-standard metabolites in its exchange reactions: {'colipap-e_e0', 'dhps-e_e0', 'metsox-S-L-e_e0', 'sq-e_e0', 'metsox-R-L-e_e0', 'tartr-D-e_e0', '4abzglu-e_e0', 'metglcur-e_e0'}. Specify a True `printing` parameter to view why these metabolites were not corrected.\n"
      ]
     },
     {
@@ -85,38 +177,169 @@
       "\n",
       "\n",
       "\n",
-      "Align exchange reactions in iSB1139 \n",
+      "Align exchange reactions in iML1515 \n",
       " ======================================\n",
-      "\n",
-      "\n",
-      "{'original': {'id': 'r307_e0', 'name': 'Mn2+'},\n",
-      " 'new': {'id': 'cpd00030_e0', 'name': 'Mn2+_e0'},\n",
-      " 'justification': 'The r307_e0 and cpd00030_e0 distinction in iSB1139 is '\n",
-      "                  'incompatible; hence, the cpd00030_e0 ID and Mn2+_e0 are '\n",
-      "                  'used. The r307_e0 ID is not a ModelSEED Database ID.'}\n",
-      "\n",
-      "\n",
-      "{'original': {'id': 'r293_e0', 'name': 'Fe2+'},\n",
-      " 'new': {'id': 'cpd10515_e0', 'name': 'Fe2+_e0'},\n",
-      " 'justification': 'The r293_e0 and cpd10515_e0 distinction in iSB1139 is '\n",
-      "                  'incompatible; hence, the cpd10515_e0 ID and Fe2+_e0 are '\n",
-      "                  'used. The r293_e0 ID is not a ModelSEED Database ID.'}\n",
       "\n",
       "\n",
       "0 exchange reactions were substituted and 0 exchange metabolite IDs were redefined by align_exchanges().\n",
       "cpd11416_c1 Bacteroides_thetaiotaomicron_VPI-5482.fbamdl.23\n",
       "bio2 1\n",
       "[2]\n",
-      "cpd11416_c2 iSB1139\n",
       "bio3 1\n",
-      "[2, 3]\n"
+      "bio4 1\n",
+      "[2, 3, 4]\n"
      ]
     }
    ],
    "source": [
     "%run ../../modelseedpy/community/commhelper.py\n",
     "\n",
-    "comm_model = build_from_species_models([ah991, pf], cobra_model=True)"
+    "comm_model2 = build_from_species_models([model1, model2], cobra_model=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximize\n",
+      "1.0*bio1 - 1.0*bio1_reverse_b18f7\n",
+      "<Solution 86.916 at 0x1a478336d30>\n",
+      "Maximize\n",
+      "1.0*bio1 - 1.0*bio1_reverse_b18f7\n",
+      "<Solution 143.703 at 0x1a478336760>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(comm_model2.objective)\n",
+    "print(comm_model2.optimize())\n",
+    "\n",
+    "print(com_model.objective)\n",
+    "print(com_model.optimize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(comm_model2.medium == com_model.medium)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Reaction SK_cpd02701_c1 at 0x1a46dd4c0d0>, <Reaction SK_cpd11416_c1 at 0x1a46dd4c160>, <Reaction SK_cpd03091_c1 at 0x1a46dd4c1f0>, <Reaction SK_cpd02701_c2 at 0x1a47100e970>, <Reaction SK_cpd03091_c2 at 0x1a47100ea00>, <Reaction SK_cpd01042_c2 at 0x1a47100ea90>, <ModelReaction sink__DASH__s_c1 at 0x1a46ceb7940>] [<ModelReaction sink__DASH__s_c2 at 0x1a4747d8fd0>, <Reaction SK_cpd11416_c0 at 0x1a4749b2c10>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(comm_model2.sinks, com_model.sinks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "DictList has no attribute or entry cpd02701_c1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\dictlist.py:527\u001b[0m, in \u001b[0;36mDictList.__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    526\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 527\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mDictList\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_by_id\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    528\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\dictlist.py:75\u001b[0m, in \u001b[0;36mDictList.get_by_id\u001b[1;34m(self, id)\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;124;03m\"\"\"Return the element with a matching id.\"\"\"\u001b[39;00m\n\u001b[1;32m---> 75\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'cpd02701_c1'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcom_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreactions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcpd02701_c1\u001b[49m)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\dictlist.py:529\u001b[0m, in \u001b[0;36mDictList.__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    527\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m DictList\u001b[38;5;241m.\u001b[39mget_by_id(\u001b[38;5;28mself\u001b[39m, attr)\n\u001b[0;32m    528\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[1;32m--> 529\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDictList has no attribute or entry \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: DictList has no attribute or entry cpd02701_c1"
+     ]
+    }
+   ],
+   "source": [
+    "print(com_model.reactions.cpd02701_c1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cobra.core import Reaction\n",
+    "sk1 = Reaction('SK_cpd11416_c1', '', '', 0, 1000)\n",
+    "sk1.add_metabolites({com_model.metabolites.cpd11416_c1: -1})\n",
+    "sk2 = Reaction('SK_cpd11416_c2', '', '', 0, 1000)\n",
+    "sk2.add_metabolites({com_model.metabolites.cpd11416_c2: -1})\n",
+    "sk2 = Reaction('SK_cpd02701_c1', '', '', 0, 1000)\n",
+    "sk2.add_metabolites({com_model.metabolites.cpd02701_c1: -1})\n",
+    "sk2 = Reaction('SK_cpd11416_c2', '', '', 0, 1000)\n",
+    "sk2.add_metabolites({com_model.metabolites.cpd11416_c2: -1})\n",
+    "model.add_reactions([sk1, sk2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from deepdiff import DeepDiff\n",
+    "print(DeepDiff(comm_model2.sinks, com_model.sinks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from deepdiff import DeepDiff\n",
+    "print(DeepDiff(comm_model2.reactions, com_model.reactions))"
    ]
   },
   {
