smetana, minimalmedia, and GIMME expression draft

--- a/examples/Community Modeling/smetana/Untitled.ipynb
+++ b/examples/Community Modeling/smetana/Untitled.ipynb
@@ -3,6 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "3690fff0-2b0c-4df5-99c3-0cfcd1a65342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   test  test2\n",
+      "1     2      2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pandas import DataFrame\n",
+    "\n",
+    "df = DataFrame({\"test\":[1,2,3,4,5], \"test2\":[3,2,1,2,3]})\n",
+    "print(df[df[\"test\"] == df[\"test2\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5443f463-e812-4282-8b29-df6f84a02d9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"test\"].iloc[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "a94fe19d-1869-471e-be0a-6449c7098f30",
    "metadata": {},
    "outputs": [
@@ -43,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
