SMETANA Notebooks and DataStandardization debugging

--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "68a7047b-5da4-479d-85a1-87497aeeb978",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cobrakbase 0.3.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define the environment path \n",
     "import os\n",
@@ -31,7 +23,7 @@
     "# import the KBase\n",
     "import cobrakbase\n",
     "# with open(\"/Users/afreiburger/Documents/kbase_token.txt\") as token_file:\n",
-    "with open(\"C:/Users/Andrew Freiburger/Documents/Argonne/kbase_token.txt\") as token_file:\n",
+    "with open(\"D:/Users/Andrew Freiburger/Documents/Argonne/kbase_token.txt\") as token_file:\n",
     "    kbase_api = cobrakbase.KBaseAPI(token_file.readline())\n",
     "\n",
     "# prevent excessive warnings\n",
@@ -39,6 +31,188 @@
     "import warnings\n",
     "warnings.filterwarnings(action='once')\n",
     "%run ../../../modelseedpy/community/mssmetana.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6c6b451b-9412-4baf-b292-146ec5796498",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Solution 52.733 at 0x2a0ca687c10>\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_pair = kbase_api.get_from_ws(\"136864/21/1\")\n",
+    "print(sample_pair.optimize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1f74e9c4-87af-42b4-81f0-7c72378af266",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n",
+      "(-1000, 1000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mem_model = kbase_api.get_from_ws(\"136864/26/1\")\n",
+    "for ex in mem_model.exchanges:\n",
+    "    print(ex.bounds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b82ea671-3c65-42fd-84f4-7e2d5d0acda8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74.84901254686409\n",
+      "7.99295963805741\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mem_model.slim_optimize())\n",
+    "for ex in mem_model.exchanges:\n",
+    "    ex.bounds = (-100,100)\n",
+    "print(mem_model.slim_optimize())"
    ]
   },
   {
