--- a/examples/Community Modeling/smetana/Untitled.ipynb
+++ b/examples/Community Modeling/smetana/Untitled.ipynb
@@ -2,6 +2,217 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "1a69bdc2-6892-4291-969a-c939c857e2ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not ellipsis",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m test \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m]}\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtest\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not ellipsis"
+     ]
+    }
+   ],
+   "source": [
+    "test = {\"test\": [1,2,3,4]}\n",
+    "print(test[\"test\"][...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "61014fd9-18d7-4035-b3ca-e05da16495d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cobra.io import load_json_model\n",
+    "\n",
+    "pf = load_json_model(r\"C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ProjectNotebooks\\CommunityModeling\\CommPhitting\\pf.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7a09c32b-fbe6-4289-b7dd-3b3f6a2cc830",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Metabolite identifier</strong></td><td>cpd00007_c0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>O2_c0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x1ea11dbd9d0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Formula</strong></td><td>O2</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Compartment</strong></td><td>c0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>In 64 reaction(s)</strong></td><td>\n",
+       "                    rxn02268_c0, rxn05092_c0, rxn00588_c0, rxn00262_c0, rxn00999_c0, rxn01192_c0, rxn00311_c0, rxn00269_c0, rxn01580_c0, rxn00478_c0, rxn01833_c0, rxn00961_c0, rxn42682_c0, rxn00206_c0, rxn25474_c0,...\n",
+       "                    </td>\n",
+       "            </tr>\n",
+       "        </table>"
+      ],
+      "text/plain": [
+       "<Metabolite cpd00007_c0 at 0x1ea11dbd9d0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pf.metabolites.cpd00007_c0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2c4a9904-281e-486c-bfcc-c3663e6049dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpd00003_c0 + cpd00100_c0 <=> cpd00004_c0 + cpd00067_c0 + cpd00448_c0\n",
+      "2 cpd15540_c0 --> cpd00100_c0 + cpd15793_c0\n",
+      "cpd00001_c0 + cpd00002_c0 + cpd00100_e0 --> cpd00008_c0 + cpd00009_c0 + cpd00067_c0 + cpd00100_c0\n",
+      "cpd00002_c0 + cpd00100_c0 --> cpd00008_c0 + cpd00067_c0 + cpd00080_c0\n",
+      "cpd00001_c0 + cpd02090_c0 --> cpd00067_c0 + cpd00080_c0 + cpd00100_c0\n",
+      "cpd00100_c0 <=> cpd00100_e0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for rxn in pf.metabolites.cpd00100_c0.reactions:\n",
+    "    print(rxn.reaction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6291e839-7ffe-47fa-947e-d5246090f223",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phyla_colors = {'other': \"gray\", 'Firmicutes': \"yellow\", 'Gammaproteobacteria': \"purple\", 'Epsilonproteobacteria': \"darkviolet\", 'Bacteroidota': \"blue\", 'Deltaproteobacteria': \"mediumpurple\", \n",
+    "                'Alphaproteobacteria': \"violet\", 'Actinobacteria': \"green\", 'Euryarchaeota': \"red\", 'Cyanobacteria': \"orange\", 'Betaproteobacteria': \"fuchsia\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "da073b55-1bc8-4eb0-90e1-5d68423dc23d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taxon_counts = {'Firmicutes': 3456, 'Gammaproteobacteria': 14635, 'Epsilonproteobacteria': 789, 'Bacteroidota': 3522, 'Deltaproteobacteria': 600, 'Spirochaetes': 444, 'Alphaproteobacteria': 5903, \n",
+    "                'Actinobacteria': 9228, 'nan': 278, 'Verrucomicrobia': 400, 'Euryarchaeota': 836, 'Cyanobacteria': 675, 'Crenarchaeota': 124, 'Candidatus Thermoplasmatota': 245, 'Candidatus Marinimicrobia': 59, \n",
+    "                'Candidatus Hydrogenedentes': 8, 'Nitrospirae': 146, None: 279, 'Planctomycetota': 291, 'Candidatus Marsarchaeota': 11, 'Calditrichaeota': 6, 'Chloroflexi': 291, 'Thermodesulfobacteria': 16, \n",
+    "                'Thaumarchaeota': 115, 'Gemmatimonadetes': 72, 'Acidobacteria': 171, 'Chlorobi': 48, 'Ignavibacteriae': 81, 'Balneolaeota': 60, 'Candidatus Handelsmanbacteria': 2, 'Fibrobacteres': 65, \n",
+    "                'Candidatus Azambacteria': 1, 'Nitrospinae': 27, 'Deferribacteres': 19, 'Candidatus Omnitrophica': 56, 'Candidatus Woesearchaeota': 8, 'Candidatus Glassbacteria': 3, 'Armatimonadetes': 23, \n",
+    "                'Candidatus Aminicenantes': 33, 'Candidatus Margulisbacteria': 4, 'Candidatus Poribacteria': 5, 'candidate division FCPU426': 1, 'Candidatus Rokubacteria': 22, 'Oligoflexia': 112, 'Aquificae': 41, \n",
+    "                'Candidatus Auribacterota': 1, 'Candidatus Dormibacteraeota': 1, 'Candidatus Sumerlaeota': 5, 'candidate division Zixibacteria': 10, 'Candidatus Dadabacteria': 5, 'Candidatus Melainabacteria': 13, \n",
+    "                'Zetaproteobacteria': 41, 'Candidatus Abyssubacteria': 2, 'Candidatus Muproteobacteria': 12, 'Candidatus Latescibacteria': 8, 'Candidatus Eisenbacteria': 4, 'Candidatus Eremiobacterota': 2, \n",
+    "                'Chrysiogenetes': 3, 'Elusimicrobia': 25, 'Rhodothermaeota': 16, 'Betaproteobacteria': 3732, 'Candidatus Heimdallarchaeota': 2, 'Candidatus Kryptonia': 4, 'Candidatus Lambdaproteobacteria': 5, \n",
+    "                'Candidatus Altiarchaeota': 8, 'Tenericutes': 2, 'Candidatus Hydrothermarchaeota': 1, 'candidate division WOR-3': 2, 'Deinococcus-Thermus': 179, 'Candidatus Bathyarchaeota': 3, \n",
+    "                'Candidatus Roizmanbacteria': 3, 'Candidatus Schekmanbacteria': 7, 'Candidatus Tectomicrobia': 6, 'Candidatus Peregrinibacteria': 7, 'Candidatus Lindowbacteria': 3, 'Candidatus Firestonebacteria': 2, \n",
+    "                'Kiritimatiellaeota': 3, 'Candidatus Cloacimonetes': 2, 'Candidatus Geothermarchaeota': 3, 'candidate division LCP-89': 1, 'Candidatus Raymondbacteria': 6, 'Candidatus Calescamantes': 6, \n",
+    "                'Candidatus Fraserbacteria': 1, 'Myxococcota': 1, 'Lentisphaerae': 9, 'candidate division NC10': 7, 'Synergistetes': 1, 'Candidatus Nomurabacteria': 1, 'Acidithiobacillia': 3, 'Candidatus Kapabacteria': 2, \n",
+    "                'Uroviricota': 2, 'Candidatus Hydrothermae': 1, 'Candidatus Binatota': 1, 'Candidatus Goldbacteria': 1, 'Chlamydiae': 227, 'Hydrogenophilalia': 12, 'Candidatus Riflebacteria': 1, 'Abditibacteriota': 3, \n",
+    "                'Candidatus Elulimicrobiota': 1, 'Candidatus Blackallbacteria': 3, 'Candidatus Saccharibacteria': 1, 'Candidatus Aerophobetes': 1, 'Candidatus Krumholzibacteriota': 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dff1d576-5e80-438f-8516-d0b794f54bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 {'other': 4250, 'Firmicutes': 3456, 'Gammaproteobacteria': 14635, 'Epsilonproteobacteria': 789, 'Bacteroidota': 3522, 'Deltaproteobacteria': 600, 'Alphaproteobacteria': 5903, 'Actinobacteria': 9228, 'Euryarchaeota': 836, 'Cyanobacteria': 675, 'Betaproteobacteria': 3732}\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_taxon_hits = {\"other\": 0}\n",
+    "for phyla, count in taxon_counts.items():\n",
+    "    if phyla is None or count < 500 or \"nan\" in phyla:\n",
+    "        new_taxon_hits[\"other\"] += count\n",
+    "    elif \"Candidatus\" in phyla:\n",
+    "        new_taxon_hits[\"Candidatus\"] += count\n",
+    "    else:\n",
+    "        if phyla not in new_taxon_hits:\n",
+    "            new_taxon_hits[phyla] = count\n",
+    "        else:\n",
+    "            new_taxon_hits[phyla] += count\n",
+    "print(len(new_taxon_hits), new_taxon_hits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f76236c-b79e-42dc-8f8f-1c3e98e1ba5b",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "from cobra.io import read_sbml_model, save_json_model\n",
+    "\n",
+    "iMAC868 = read_sbml_model(r\"C:\\Users\\Andrew Freiburger\\Downloads\\iMAC868.xml\")\n",
+    "iST807 = read_sbml_model(r\"C:\\Users\\Andrew Freiburger\\Downloads\\iST807.xml\")\n",
+    "mba_model = read_sbml_model(r\"C:\\Users\\Andrew Freiburger\\Downloads\\mba_model.xml\")\n",
+    "MODEL1607200000_url = read_sbml_model(r\"C:\\Users\\Andrew Freiburger\\Downloads\\MODEL1607200000_url.xml\")\n",
+    "\n",
+    "save_json_model(iMAC868, r\"C:\\Users\\Andrew Freiburger\\Downloads\\iMAC868.json\")\n",
+    "save_json_model(iST807, r\"C:\\Users\\Andrew Freiburger\\Downloads\\iST807.json\")\n",
+    "save_json_model(mba_model, r\"C:\\Users\\Andrew Freiburger\\Downloads\\mba_model.json\")\n",
+    "save_json_model(MODEL1607200000_url, r\"C:\\Users\\Andrew Freiburger\\Downloads\\MODEL1607200000_url.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "258604c1-6271-4d16-8bdd-378dad1cdb5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['genome_id', 'genome_name', 'taxon_id', 'kingdom', 'phylum', 'class', 'order', 'family', 'genus', 'species', 'taxon_lineage_ids', 'taxon_lineage_names']\n"
+     ]
+    }
+   ],
+   "source": [
+    "headings = \"genome_id       genome_name     taxon_id        kingdom phylum  class   order   family  genus   species taxon_lineage_ids       taxon_lineage_names\"\n",
+    "headings = list(filter(lambda x: x != \"\", headings.split(\" \")))\n",
+    "print(headings)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "c2c7c2ed-ea2b-4ff1-a186-f85187b2f354",
    "metadata": {
