--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "68a7047b-5da4-479d-85a1-87497aeeb978",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cobrakbase 0.3.1\n"
+     ]
+    }
+   ],
    "source": [
     "# define the environment path \n",
     "import os\n",
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b283a504-0495-4365-8bb0-49ef2ceee010",
    "metadata": {},
    "outputs": [],
@@ -226,6 +234,147 @@
     "BC15 = kbase_api.get_from_ws(\"Bacillus_sp._bc15.RAST.fbamodel\", 114731)\n",
     "AP49_BC15_model = kbase_api.get_from_ws(\"AP49-BC15\",114731)\n",
     "# community_media = _get_media(None, AP49_BC15_model, [AP49, BC15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "695e1375-2b58-4e4f-a17a-b3bb40723e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The exchange  metabolite ID's of the model Sphingobium_AP49_pacbio_v2.RAST.fbamodel,Bacillus_sp._bc15.RAST.fbamodel are completely standardized to ModelSEED.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Align exchange reactions in Sphingobium_AP49_pacbio_v2.RAST.fbamodel \n",
+      " =======================================================================\n",
+      "\n",
+      "\n",
+      "\n",
+      "Align exchange reactions in Bacillus_sp._bc15.RAST.fbamodel \n",
+      " ==============================================================\n",
+      "\n",
+      "\n",
+      "0 exchange reactions were substituted and 0 exchange metabolite IDs were redefined by align_exchanges().\n",
+      "cpd11416_c1 Sphingobium_AP49_pacbio_v2.RAST.fbamodel\n",
+      "bio2 1\n",
+      "[2]\n",
+      "cpd11416_c2 Bacillus_sp._bc15.RAST.fbamodel\n",
+      "bio3 1\n",
+      "[2, 3]\n",
+      "The minimal flux media consists of 42 compounds and a 1.9975620238931524 total influx, with a growth value of 0.09999999999935463\n",
+      "The minimal flux media consists of 35 compounds and a 1.4912990953548353 total influx, with a growth value of 0.09999999999815128\n",
+      "\n",
+      "The Sphingobium_AP49_pacbio_v2.RAST.fbamodel on Bacillus_sp._bc15.RAST.fbamodel) MRO score: 0.6904761904761905 (69.05%). This is the percent of nutritional requirements in Sphingobium_AP49_pacbio_v2.RAST.fbamodel that overlap with Bacillus_sp._bc15.RAST.fbamodel) (29/42).\n",
+      "\n",
+      "The Bacillus_sp._bc15.RAST.fbamodel on Sphingobium_AP49_pacbio_v2.RAST.fbamodel) MRO score: 0.8285714285714286 (82.86%). This is the percent of nutritional requirements in Bacillus_sp._bc15.RAST.fbamodel that overlap with Sphingobium_AP49_pacbio_v2.RAST.fbamodel) (29/35).\n",
+      "{'dictionary_item_removed': [root['EX_cpd00254_e0'], root['EX_cpd00007_e0'], root['EX_cpd00118_e0'], root['EX_cpd00793_e0'], root['EX_cpd00205_e0'], root['EX_cpd00028_e0'], root['EX_cpd00048_e0'], root['EX_cpd00051_e0'], root['EX_cpd00024_e0'], root['EX_cpd00033_e0'], root['EX_cpd00058_e0'], root['EX_cpd00184_e0'], root['EX_cpd00104_e0'], root['EX_cpd00034_e0'], root['EX_cpd00099_e0'], root['EX_cpd00069_e0'], root['EX_cpd00654_e0'], root['EX_cpd15603_e0'], root['EX_cpd00132_e0'], root['EX_cpd00107_e0'], root['EX_cpd00644_e0'], root['EX_cpd00220_e0'], root['EX_cpd00367_e0'], root['EX_cpd00036_e0'], root['EX_cpd00322_e0'], root['EX_cpd01017_e0'], root['EX_cpd00106_e0'], root['EX_cpd00065_e0'], root['EX_cpd00149_e0'], root['EX_cpd00156_e0'], root['EX_cpd00030_e0'], root['EX_cpd00264_e0'], root['EX_cpd00161_e0'], root['EX_cpd00277_e0'], root['EX_cpd00063_e0'], root['EX_cpd00066_e0'], root['EX_cpd00017_e0'], root['EX_cpd00393_e0'], root['EX_cpd00039_e0'], root['EX_cpd00129_e0'], root['EX_cpd00794_e0'], root['EX_cpd00215_e0'], root['EX_cpd00136_e0'], root['EX_cpd10515_e0'], root['EX_cpd00119_e0'], root['EX_cpd03847_e0'], root['EX_cpd00355_e0']]}\n",
+      "\n",
+      "MIP score: 47\t\t\t47 required compound(s) can be sourced via syntrophy:\n",
+      "executing MP\n",
+      "The exchange  metabolite ID's of the model Sphingobium_AP49_pacbio_v2.RAST.fbamodel+Bacillus_sp._bc15.RAST.fbamodel are completely standardized to ModelSEED.\n",
+      "The minimal flux media consists of 39 compounds and a 1692.2961586939582 total influx, with a growth value of 99.99999999999797\n",
+      "\n",
+      "\n",
+      "\n",
+      "Standardize exchange reactions in Sphingobium_AP49_pacbio_v2.RAST.fbamodel \n",
+      " =============================================================================\n",
+      "The exchange  metabolite ID's of the model Sphingobium_AP49_pacbio_v2.RAST.fbamodel are completely standardized to ModelSEED.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\metabolite.py:191: UserWarning: The element 'R' does not appear in the periodic table\n",
+      "  warn(f\"The element {e} does not appear in the periodic table\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remaining possible_contributions 55\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\metabolite.py:191: UserWarning: The element 'R' does not appear in the periodic table\n",
+      "  warn(f\"The element {e} does not appear in the periodic table\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remaining possible_contributions 48\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\metabolite.py:191: UserWarning: The element 'R' does not appear in the periodic table\n",
+      "  warn(f\"The element {e} does not appear in the periodic table\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remaining possible_contributions 45\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\metabolite.py:191: UserWarning: The element 'R' does not appear in the periodic table\n",
+      "  warn(f\"The element {e} does not appear in the periodic table\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remaining possible_contributions 43\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\metabolite.py:191: UserWarning: The element 'R' does not appear in the periodic table\n",
+      "  warn(f\"The element {e} does not appear in the periodic table\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remaining possible_contributions 42\n",
+      "\n",
+      "\n",
+      "Standardize exchange reactions in Bacillus_sp._bc15.RAST.fbamodel \n",
+      " ====================================================================\n",
+      "The exchange  metabolite ID's of the model Bacillus_sp._bc15.RAST.fbamodel are completely standardized to ModelSEED.\n",
+      "remaining possible_contributions 46\n",
+      "MP score:\t\t\tEach member can possibly contribute the following to the community:\n",
+      "\n",
+      "Sphingobium_AP49_pacbio_v2.RAST.fbamodel \t 32\n",
+      "Bacillus_sp._bc15.RAST.fbamodel \t 48\n",
+      "The Sphingobium_AP49_pacbio_v2.RAST.fbamodel_Bacillus_sp._bc15.RAST.fbamodel pair has been examined after 0.5888020833333333 minutes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_pair(AP49, BC15, None)"
    ]
   },
   {
@@ -1252,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "50c765dd-fd77-41ed-ab78-7e8d76661577",
    "metadata": {},
    "outputs": [],
