SMETANA KBase output draft and Notebook updates

--- a/examples/Community Modeling/smetana/MSsmetana.ipynb
+++ b/examples/Community Modeling/smetana/MSsmetana.ipynb
@@ -68,6 +68,7 @@
    "execution_count": 2,
    "id": "1474df78",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -756,6 +757,7 @@
    "execution_count": 3,
    "id": "377d6fd6-3599-4ab8-89fe-e8d2745f4ec6",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
