--- a/examples/HTML_report.ipynb
+++ b/examples/HTML_report.ipynb
@@ -1731,12 +1731,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46b790aa-280e-43cc-b43f-a709a5e1c7e7",
+   "metadata": {},
+   "source": [
+    "# Combine pandas Series into a single DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "c2502a8b-34b3-4cec-95da-7f8f4b254069",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      a    b    c\n",
+       "0  12.0  2.0  4.0\n",
+       "1   3.0  2.0  NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from pandas import Series, concat\n",
+    "\n",
+    "a = Series({\"a\": 12, \"b\":2, \"c\":4})\n",
+    "b = Series({\"a\": 3, \"b\":2})\n",
+    "display(concat([a,b], axis=1).T)"
+   ]
   }
  ],
  "metadata": {
