--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -43,6 +43,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "50c765dd-fd77-41ed-ab78-7e8d76661577",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modelseedpy.core.exceptions import ModelError\n",
+    "def test_pair(member1, member2, community):\n",
+    "    try:\n",
+    "        start_time = process_time()\n",
+    "        comm = MSSmetana([member1, member2], community)\n",
+    "        comm.all_scores()\n",
+    "        end_time = process_time()\n",
+    "\n",
+    "        print(f\"The {member1.id}_{member2.id} pair has been examined after {(end_time-start_time)/60} minutes.\")\n",
+    "    except (ObjectiveError, ModelError, NameError) as e:\n",
+    "        print(f\"\\n\\nERROR:{e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "6c6b451b-9412-4baf-b292-146ec5796498",
    "metadata": {},
@@ -225,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b283a504-0495-4365-8bb0-49ef2ceee010",
    "metadata": {},
    "outputs": [],
@@ -240,7 +260,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "695e1375-2b58-4e4f-a17a-b3bb40723e1e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -260,24 +283,19 @@
       "\n",
       "\n",
       "0 exchange reactions were substituted and 0 exchange metabolite IDs were redefined by align_exchanges().\n",
-      "cpd11416_c1 Sphingobium_AP49_pacbio_v2.RAST.fbamodel\n",
-      "bio2 1\n",
-      "[2]\n",
-      "cpd11416_c2 Bacillus_sp._bc15.RAST.fbamodel\n",
-      "bio3 1\n",
-      "[2, 3]\n",
-      "The minimal flux media consists of 42 compounds and a 1.9975620238931524 total influx, with a growth value of 0.09999999999935463\n",
-      "The minimal flux media consists of 35 compounds and a 1.4912990953548353 total influx, with a growth value of 0.09999999999815128\n",
+      "[<ModelCompound cpd11416_c1 at 0x1b304f199d0>, <ModelCompound cpd11416_c2 at 0x1b3081603a0>, <Metabolite cpd11416_c0 at 0x1b30b1a8910>]\n",
+      "The minimal flux media consists of 42 compounds and a 1.997562023899096 total influx, with a growth value of 0.0999999999995738\n",
+      "The minimal flux media consists of 36 compounds and a 1.4912990953788197 total influx, with a growth value of 0.09999999999989304\n",
       "\n",
       "The Sphingobium_AP49_pacbio_v2.RAST.fbamodel on Bacillus_sp._bc15.RAST.fbamodel) MRO score: 0.6904761904761905 (69.05%). This is the percent of nutritional requirements in Sphingobium_AP49_pacbio_v2.RAST.fbamodel that overlap with Bacillus_sp._bc15.RAST.fbamodel) (29/42).\n",
       "\n",
-      "The Bacillus_sp._bc15.RAST.fbamodel on Sphingobium_AP49_pacbio_v2.RAST.fbamodel) MRO score: 0.8285714285714286 (82.86%). This is the percent of nutritional requirements in Bacillus_sp._bc15.RAST.fbamodel that overlap with Sphingobium_AP49_pacbio_v2.RAST.fbamodel) (29/35).\n",
-      "{'dictionary_item_removed': [root['EX_cpd00254_e0'], root['EX_cpd00007_e0'], root['EX_cpd00118_e0'], root['EX_cpd00793_e0'], root['EX_cpd00205_e0'], root['EX_cpd00028_e0'], root['EX_cpd00048_e0'], root['EX_cpd00051_e0'], root['EX_cpd00024_e0'], root['EX_cpd00033_e0'], root['EX_cpd00058_e0'], root['EX_cpd00184_e0'], root['EX_cpd00104_e0'], root['EX_cpd00034_e0'], root['EX_cpd00099_e0'], root['EX_cpd00069_e0'], root['EX_cpd00654_e0'], root['EX_cpd15603_e0'], root['EX_cpd00132_e0'], root['EX_cpd00107_e0'], root['EX_cpd00644_e0'], root['EX_cpd00220_e0'], root['EX_cpd00367_e0'], root['EX_cpd00036_e0'], root['EX_cpd00322_e0'], root['EX_cpd01017_e0'], root['EX_cpd00106_e0'], root['EX_cpd00065_e0'], root['EX_cpd00149_e0'], root['EX_cpd00156_e0'], root['EX_cpd00030_e0'], root['EX_cpd00264_e0'], root['EX_cpd00161_e0'], root['EX_cpd00277_e0'], root['EX_cpd00063_e0'], root['EX_cpd00066_e0'], root['EX_cpd00017_e0'], root['EX_cpd00393_e0'], root['EX_cpd00039_e0'], root['EX_cpd00129_e0'], root['EX_cpd00794_e0'], root['EX_cpd00215_e0'], root['EX_cpd00136_e0'], root['EX_cpd10515_e0'], root['EX_cpd00119_e0'], root['EX_cpd03847_e0'], root['EX_cpd00355_e0']]}\n",
+      "The Bacillus_sp._bc15.RAST.fbamodel on Sphingobium_AP49_pacbio_v2.RAST.fbamodel) MRO score: 0.8055555555555556 (80.56%). This is the percent of nutritional requirements in Bacillus_sp._bc15.RAST.fbamodel that overlap with Sphingobium_AP49_pacbio_v2.RAST.fbamodel) (29/36).\n",
+      "{'dictionary_item_removed': [root['EX_cpd00797_e0'], root['EX_cpd00051_e0'], root['EX_cpd00030_e0'], root['EX_cpd00066_e0'], root['EX_cpd00099_e0'], root['EX_cpd00184_e0'], root['EX_cpd00058_e0'], root['EX_cpd00063_e0'], root['EX_cpd00033_e0'], root['EX_cpd00107_e0'], root['EX_cpd00039_e0'], root['EX_cpd00119_e0'], root['EX_cpd00264_e0'], root['EX_cpd00017_e0'], root['EX_cpd00355_e0'], root['EX_cpd00161_e0'], root['EX_cpd00793_e0'], root['EX_cpd00322_e0'], root['EX_cpd00007_e0'], root['EX_cpd00254_e0'], root['EX_cpd00156_e0'], root['EX_cpd03847_e0'], root['EX_cpd00048_e0'], root['EX_cpd00069_e0'], root['EX_cpd00129_e0'], root['EX_cpd00644_e0'], root['EX_cpd00654_e0'], root['EX_cpd00104_e0'], root['EX_cpd00034_e0'], root['EX_cpd00132_e0'], root['EX_cpd00024_e0'], root['EX_cpd00118_e0'], root['EX_cpd00149_e0'], root['EX_cpd00215_e0'], root['EX_cpd10515_e0'], root['EX_cpd00065_e0'], root['EX_cpd00205_e0'], root['EX_cpd00367_e0'], root['EX_cpd15603_e0'], root['EX_cpd00106_e0'], root['EX_cpd00794_e0'], root['EX_cpd00028_e0'], root['EX_cpd00220_e0'], root['EX_cpd00277_e0'], root['EX_cpd00158_e0'], root['EX_cpd00393_e0'], root['EX_cpd00136_e0'], root['EX_cpd01017_e0']]}\n",
       "\n",
-      "MIP score: 47\t\t\t47 required compound(s) can be sourced via syntrophy:\n",
+      "MIP score: 48\t\t\t48 required compound(s) can be sourced via syntrophy:\n",
       "executing MP\n",
       "The exchange  metabolite ID's of the model Sphingobium_AP49_pacbio_v2.RAST.fbamodel+Bacillus_sp._bc15.RAST.fbamodel are completely standardized to ModelSEED.\n",
-      "The minimal flux media consists of 39 compounds and a 1692.2961586939582 total influx, with a growth value of 99.99999999999797\n",
+      "The minimal flux media consists of 38 compounds and a 1692.2961586939712 total influx, with a growth value of 99.99999999999902\n",
       "\n",
       "\n",
       "\n",
@@ -298,7 +316,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remaining possible_contributions 55\r"
+      "remaining possible_contributions 56\r"
      ]
     },
     {
@@ -328,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remaining possible_contributions 45\r"
+      "remaining possible_contributions 46\r"
      ]
     },
     {
@@ -343,22 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remaining possible_contributions 43\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\core\\metabolite.py:191: UserWarning: The element 'R' does not appear in the periodic table\n",
-      "  warn(f\"The element {e} does not appear in the periodic table\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "remaining possible_contributions 42\n",
+      "remaining possible_contributions 43\n",
       "\n",
       "\n",
       "Standardize exchange reactions in Bacillus_sp._bc15.RAST.fbamodel \n",
@@ -367,9 +370,9 @@
       "remaining possible_contributions 46\n",
       "MP score:\t\t\tEach member can possibly contribute the following to the community:\n",
       "\n",
-      "Sphingobium_AP49_pacbio_v2.RAST.fbamodel \t 32\n",
-      "Bacillus_sp._bc15.RAST.fbamodel \t 48\n",
-      "The Sphingobium_AP49_pacbio_v2.RAST.fbamodel_Bacillus_sp._bc15.RAST.fbamodel pair has been examined after 0.5888020833333333 minutes.\n"
+      "Sphingobium_AP49_pacbio_v2.RAST.fbamodel \t 33\n",
+      "Bacillus_sp._bc15.RAST.fbamodel \t 49\n",
+      "The Sphingobium_AP49_pacbio_v2.RAST.fbamodel_Bacillus_sp._bc15.RAST.fbamodel pair has been examined after 0.6044270833333333 minutes.\n"
      ]
     }
    ],
@@ -1397,26 +1400,6 @@
    "metadata": {},
    "source": [
     "# test community pairs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "50c765dd-fd77-41ed-ab78-7e8d76661577",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from modelseedpy.core.exceptions import ModelError\n",
-    "def test_pair(member1, member2, community):\n",
-    "    try:\n",
-    "        start_time = process_time()\n",
-    "        comm = MSSmetana([member1, member2], community)\n",
-    "        comm.all_scores()\n",
-    "        end_time = process_time()\n",
-    "\n",
-    "        print(f\"The {member1.id}_{member2.id} pair has been examined after {(end_time-start_time)/60} minutes.\")\n",
-    "    except (ObjectiveError, ModelError, NameError) as e:\n",
-    "        print(f\"\\n\\nERROR:{e}\")"
    ]
   },
   {
